--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atoi = "2.0.0"
 itertools = "0.10.5"
+nom = "6.2.1"
 pico-args = "0.5.0"
